--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
     "url": "https://github.com/oslabs-beta/kr8os/issues"
   },
   "homepage": "https://github.com/oslabs-beta/kr8os#readme",
-  "dependencies": {
+  "dependencies": {    "@mui/icons-material": "^5.11.9",
+    "@mui/material": "^5.11.10",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "nodemon": "^2.0.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-pro-sidebar": "^1.0.0",
-    "@mui/icons-material": "^5.11.9",
-    "@mui/material": "^5.11.10",
     "react-router-dom": "^6.8.1"
   },
   "devDependencies": {
@@ -34,9 +34,7 @@
     "@babel/preset-react": "^7.18.6",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
-    "babel-loader": "^9.1.2",
-    "concurrently": "^7.6.0",
-    "css-loader": "^6.7.3",
+    "@kubernetes/client-node": "^0.18.1",
     "eslint": "^8.34.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.27.5",
@@ -49,6 +47,8 @@
     "style-loader": "^3.3.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "^4.11.1"
+    "webpack-dev-server": "^4.11.1",
+    "ts-loader": "^9.4.2",
+    "typescript": "^4.9.5"
   }
 }
