--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@kubernetes/client-node": "^0.18.1",
+    "concurrently": "^7.6.0",
     "eslint": "^8.34.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.27.5",
