--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cors": "^2.8.5",
     "css-loader": "^6.7.3",
     "express": "^4.18.2",
+    "file-loader": "^6.2.0",
     "nodemon": "^2.0.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -49,6 +50,7 @@
     "html-webpack-plugin": "^5.5.0",
     "react-graph-vis": "^1.0.7",
     "style-loader": "^3.3.1",
+    "svg-inline-loader": "^0.8.2",
     "ts-loader": "^9.4.2",
     "typescript": "^4.9.5",
     "webpack": "^5.75.0",
