--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
     "express": "^4.18.2",
     "nodemon": "^2.0.20",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-pro-sidebar": "^1.0.0",
-    "react-router-dom": "^6.8.1",
-    "string-replace-all": "^2.0.0"
+    "react-router-dom": "^6.8.1"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.20.2",
