transcribed server.js to server.ts by Sheng and Jordy

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack serve --hot --open",
-    "dev": "concurrently \"nodemon ./server/server.js\" \"webpack serve --hot --open\""
+    "dev": "concurrently \"nodemon ./server/server.ts\" \"webpack serve --hot --open\""
   },
   "repository": {
     "type": "git",
@@ -40,6 +40,7 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@kubernetes/client-node": "^0.18.1",
+    "@types/cors": "^2.8.13",
     "concurrently": "^7.6.0",
     "eslint": "^8.34.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -53,6 +54,7 @@
     "style-loader": "^3.3.1",
     "svg-inline-loader": "^0.8.2",
     "ts-loader": "^9.4.2",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.5",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
