--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "kr8os",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.tsx",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack serve --hot --open",
-    "dev": "concurrently \"nodemon ./server/server.js\" \"webpack serve --hot --open\""
+    "dev": "concurrently \"nodemon ./server/server.js\" \"webpack serve --hot --open\"",
+    "tsc": "tsc"
   },
   "repository": {
     "type": "git",
@@ -40,6 +41,9 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@kubernetes/client-node": "^0.18.1",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "@types/vis": "^4.21.24",
     "concurrently": "^7.6.0",
     "eslint": "^8.34.0",
     "eslint-config-airbnb": "^19.0.4",
