--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,10 +4,10 @@
     "noImplicitAny": true,
     "module": "commonJS",
     "esModuleInterop": true,
-    "target": "ES2021",
+    "target": "ES2016",
     "jsx": "react",
     "allowJs": true,
     "moduleResolution": "node"
   },
-  "include": ["client/**/*", "server/**/*"],
+  "include": ["client/**/*", "server/**/*", "./custom.d.ts"],
 }
