Create integration test for backend routes
Co-authored-by: mushrathc <mushrathc@users.noreply.github.com>
Co-authored-by: shengli356 <shengli356@users.noreply.github.com>
Co-authored-by: Jordy Gonzalez <JordyGonza@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.tsx",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "webpack serve --hot --open",
     "dev": "concurrently \"nodemon ./server/server.ts\" \"webpack serve --hot --open\""
   },
@@ -40,11 +40,11 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@kubernetes/client-node": "^0.18.1",
+    "@types/cors": "^2.8.13",
+    "@types/fs-extra": "^11.0.1",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/vis": "^4.21.24",
-    "@types/cors": "^2.8.13",
-    "@types/fs-extra": "^11.0.1",
     "concurrently": "^7.6.0",
     "eslint": "^8.34.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -54,8 +54,10 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^29.5.0",
     "react-graph-vis": "^1.0.7",
     "style-loader": "^3.3.1",
+    "supertest": "^6.3.3",
     "svg-inline-loader": "^0.8.2",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
