--- a/server/controllers/alerts/HighCPUUsage.yaml
+++ b/server/controllers/alerts/HighCPUUsage.yaml
@@ -3,8 +3,8 @@ additionalPrometheusRulesMap:
   groups:
   - name: Kubernetes cluster alerts
     rules:
-    - alert: HighCPUUsage
-      expr: sum(rate(container_cpu_usage_seconds_total{namespace="default"}[5m])) by (pod_name) > 1
+    - alert: MyAlert
+      expr: sum(rate(container_cpu_usage_seconds_total{namespace="default"}[5m])) by (pod_name) > sum(rate(container_cpu_usage_seconds_total{namespace="default"}[5m])) by (pod_name) > 80
       for: 5m
       labels:
         severity: warning
