--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/react-dom": "^18.0.11",
     "@types/vis": "^4.21.24",
     "concurrently": "^7.6.0",
+    "cypress": "^12.7.0",
     "eslint": "^8.34.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.27.5",
