--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@kubernetes/client-node": "^0.18.1",
     "@types/cors": "^2.8.13",
     "@types/fs-extra": "^11.0.1",
+    "@types/mocha": "^10.0.1",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/vis": "^4.21.24",
