--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "target": "ES2016",
     "jsx": "react",
     "allowJs": true,
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "removeComments": true
   },
   "include": ["client/**/*", "server/**/*", "./custom.d.ts"],
 }
