--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.10",
     "babel-loader": "^9.1.2",
+    "bootstrap": "^5.3.0-alpha1",
     "cors": "^2.8.5",
     "css-loader": "^6.7.3",
     "express": "^4.18.2",
@@ -33,6 +34,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^5.3.4",
     "react-pro-sidebar": "^1.0.0",
     "react-router-dom": "^6.8.1"
   },
