completed redis caching

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest --verbose",
     "start": "webpack serve --hot --open",
-    "dev": "concurrently \"nodemon ./server/server.ts\" \"webpack serve --hot --open\"",
+    "dev": "concurrently \"redis-server\" \"nodemon ./server/server.ts\" \"webpack serve --hot --open\"",
     "cypress:open": "cypress open"
   },
   "repository": {
